After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 604084 - should do lazy init to not slow down nautilus start
should do lazy init to not slow down nautilus start
Status: RESOLVED FIXED
Product: brasero
Classification: Applications
Component: nautilus-extension
2.29.x
Other Linux
: Normal normal
: 2.26
Assigned To: Brasero maintainer(s)
Brasero maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2009-12-08 15:33 UTC by Sebastien Bacher
Modified: 2010-01-07 16:33 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
git formatted patch for lazy initialization (3.03 KB, patch)
2010-01-04 16:49 UTC, Martin Pitt
none Details | Review
git formatted patch for lazy initialization (3.60 KB, patch)
2010-01-05 12:28 UTC, Martin Pitt
committed Details | Review

Description Sebastien Bacher 2009-12-08 15:33:39 UTC
Right now one second on a six second nautilus start is used by brasero which seems to go through all the installed .so and do init to be ready to be used, the callback which does the nautilus init should only do registration though and let the actual code init and brasero loading to be done on first burn: opening for example if that's what requires those rather that slowing down nautilus at every start for every user in case brasero would be used later...
Comment 1 Martin Pitt 2010-01-04 16:49:16 UTC
Created attachment 150783 [details] [review]
git formatted patch for lazy initialization

What do you think about this patch? It works well for me and reduces cold-cache startup time from 3.1 to 0.3 seconds on my system.
Comment 2 Martin Pitt 2010-01-05 12:28:46 UTC
Created attachment 150836 [details] [review]
git formatted patch for lazy initialization

This defers the gconf initialization and debug setting as well.
Comment 3 Philippe Rouquier 2010-01-07 16:33:33 UTC
Thanks for the report and the patch.
It looks good to me. I commited to master but apparently it needs some more work to be ported to stable branch. I'll do it before next release.