Speed up nautilus extension startup

Do not call brasero_*_start() at nautilus startup, they are very expensive (on
my system it takes 3.1 seconds with a cold cache). Instead, call those lazily
when needed. Now it starts up in less than 0.3 seconds.

https://bugzilla.gnome.org/show_bug.cgi?id=604084